--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ sidebyside {
 
 h1 { 
 	font-size: 66px;
-	font-weight: bold, italic;
+	font-weight: italic;
   font-family: "Bagel Fat One";
 	text-align: left;
   margin-left: 10%;
