--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ nav {
 	background-color: #bca4c7;
 }
 nav div {
-  font-family: "Bagel Fat One";
+	font-family: "DM Serif Text";
 	text-align: center;
 	font-size: 1.25rem;
 	margin: 5px 5px 10px 5px;
@@ -175,8 +175,8 @@ nav div {
 	margin-right: auto;
 }
 nav a {
-  font-family: "Bagel Fat One";
-  display: block;
+  	font-family: "DM Serif Text";
+  	display: block;
 	margin: 5px;
 	background: #bca4c7;
 	border-radius: 5px;
@@ -187,16 +187,16 @@ nav a {
 		color: var(--txtblk);
 }
 nav a:link, nav a:visited { 
-  font-family: "Bagel Fat One";
+ 	font-family: "DM Serif Text";
 	color: var(--gradientBottom);
 	margin-left: auto;
 	margin-right: auto;
 }
 nav a:hover, nav a:focus {
-  font-family: "Bagel Fat One";
+  	font-family: "DM Serif Text";
 	background: #bca4c7;
 	text-decoration:none;
-	  color: #bca4c7;
+	color: #bca4c7;
 	margin-left: auto;
 	margin-right: auto;
 }
