--- a/style.css
+++ b/style.css
@@ -145,6 +145,25 @@ header span {
 	margin-left:auto;
 	margin-right:auto;
 }
+/* unvisited link */
+a:link {
+  color: white;
+}
+
+/* visited link */
+a:visited {
+  color: white;
+}
+
+/* mouse over link */
+a:hover {
+  color: pink;
+}
+
+/* selected link */
+a:active {
+  color: white;
+}
 
 .nav{
   font-size:25px;
