--- a/style.css
+++ b/style.css
@@ -250,7 +250,13 @@ sidebyside {
 
 }
 
-
+abt { 
+	font-size: 50px;
+	font-weight: italic;
+  font-family: "Akaya Kanadaka";
+	text-align: left;
+  margin-left: 10%;
+}
 
 h1 { 
 	font-size: 66px;
