--- a/style.css
+++ b/style.css
@@ -234,10 +234,12 @@ section {
 
 footer {
 	text-align: center;
-	margin-bottom: 5vw;
-	font-size: 0.8rem;
+	margin-bottom: 5px;
+	font-size: 20px;
+	background-color:#584a5c;
+	width:100%;
 }
-footer a { 
+ a { 
 	text-decoration: none;
 }
 
