--- a/style.css
+++ b/style.css
@@ -234,10 +234,13 @@ section {
 
 footer {
 	text-align: center;
-	margin-bottom: 5px;
 	font-size: 20px;
 	background-color:#584a5c;
-	width:100%;
+	width:110%;
+	display: flex;
+  	justify-content: center;
+  	align-items: center;
+  	flex-direction: column;
 }
  a { 
 	text-decoration: none;
