--- a/style.css
+++ b/style.css
@@ -236,11 +236,10 @@ footer {
 	text-align: center;
 	font-size: 20px;
 	background-color:#584a5c;
-	width:110%;
+	width:100%;
 	display: flex;
   	justify-content: center;
-  	align-items: center;
-  	flex-direction: column;
+  	align-items: center
 }
  a { 
 	text-decoration: none;
