--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ footer {
 	width:100%;
 	display: flex;
   	justify-content: center;
-  	align-items: center
+  	align-items: center;
 }
  a { 
 	text-decoration: none;
