--- a/style.css
+++ b/style.css
@@ -321,6 +321,8 @@ li {
 	font-family: "Lexend";
 	float: right;
 	justify-content: space-between;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 li a {
