--- a/style.css
+++ b/style.css
@@ -321,18 +321,17 @@ li {
 	font-family: "Lexend";
 	float: right;
 	justify-content: space-between;
-	margin-left:auto;
-	margin-right:auto;
-	display: block;
+	border-radius: 5px;
+	display: table;
 	background-color: #bca4c7;
 }
 
 li a {
 	font-family: "Lexend";
 	float: right;
-	justify-content: space-between;
 	margin-left:auto;
 	margin-right:auto;
+	margin:5px;
 	border-radius: 5px;
 	padding: 2px 7px 2px 7px;
 	display: block;
