--- a/style.css
+++ b/style.css
@@ -319,7 +319,7 @@ ul {
 
 li {
 	font-family: "Lexend";
-	position:fixed;
+	position:sticky;
 	float: right;
 	justify-content: space-between;
 	border-radius: 5px;
