--- a/style.css
+++ b/style.css
@@ -319,7 +319,7 @@ ul {
 
 li {
 	font-family: "Lexend";
-	position:sticky;
+	position:fixed;
 	margin-right:3px;
 	float: right;
 	justify-content: space-between;
