--- a/style.css
+++ b/style.css
@@ -319,7 +319,7 @@ ul {
 
 li {
 	font-family: "Lexend";
-	position:fixed;
+	position:sticky;
 	margin-right:3px;
 	float: right;
 	justify-content: space-between;
@@ -330,6 +330,7 @@ li {
 
 li a {
 	font-family: "Lexend";
+	position: fixed;
 	float: right;
 	margin-left:auto;
 	margin-right:auto;
