--- a/style.css
+++ b/style.css
@@ -238,6 +238,8 @@ section {
 }
 
 footer {
+	margin-top:5%;
+	margin-bottom: 5%;
 	text-align: center;
 	font-size: 20px;
 	background-color:#584a5c;
