--- a/style.css
+++ b/style.css
@@ -382,14 +382,12 @@ summary {
 }
 
 details[open] {
- background-color: var(--bg);
-  color: white;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  outline: none;
-  font-size: 15px;
-	padding-bottom: 5px;
+   background-color: #bca4c7;
+	text-align: left;
+	margin: 5px;
+	border-radius: 5px;
+	padding: 2px 2px 0px 2px;
+  font-weight: bold;
 
 }
 
