--- a/style.css
+++ b/style.css
@@ -376,6 +376,8 @@ summary {
    background-color: #bca4c7;
 	text-align: left;
 	margin: 5px;
+	margin-left:auto;
+	margin-right:auto;
 	border-radius: 5px;
 	padding: 2px 2px 0px 2px;
   font-weight: bold;
@@ -385,6 +387,8 @@ details[open] {
    background-color: #bca4c7;
 	text-align: left;
 	margin: 5px;
+	margin-left:auto;
+	margin-right:auto;
 	border-radius: 5px;
 	padding: 2px 2px 0px 2px;
   font-weight: bold;
@@ -395,6 +399,8 @@ details[open] summary {
    background-color: #bca4c7;
 	text-align: left;
 	margin: 5px;
+	margin-left:auto;
+	margin-right:auto;
 	border-radius: 5px;
 	padding: 2px 2px 0px 2px;
   font-weight: bold;
