--- a/style.css
+++ b/style.css
@@ -95,7 +95,17 @@ background-color: #584a5c;
 }
 
 
-
+.subnavcontainer {
+	max-width: 80%;
+	margin: 5px auto 5px auto;
+	display: flex;
+	flex-wrap: wrap;
+	padding: 5px;
+	justify-content: space-evenly;
+	/* container background pattern */
+background-color: #584a5c;
+  /*url('https://web.archive.org/web/20090830213213im_/http://www.geocities.com/butterfly_teez/bgpurpleblinkstars.gif');*/
+}
 
 }
 /* these control the column widths */
