--- a/style.css
+++ b/style.css
@@ -405,6 +405,7 @@ details[open] {
 	border-radius: 5px;
 	padding: 2px 2px 0px 2px;
   font-weight: bold;
+	color:white;
 
 }
 
@@ -417,6 +418,7 @@ details[open] summary {
 	border-radius: 5px;
 	padding: 2px 2px 0px 2px;
   font-weight: bold;
+	color:white;
 }
 
 }
