--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ body {
 
 .container {
 	max-width: 80%;
+	max-height:500%;
 	margin: 5px auto 5px auto;
 	border: 6px ridge var(--border);
 	outline: 3px solid var(--gradientTop);
