--- a/imghover.css
+++ b/imghover.css
@@ -6,3 +6,25 @@ img:hover {
     -webkit-transform:scale(1.5); /* or some other value */
     transform:scale(1.5);
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #000;
+}
+
+.modal-content {
+    position: relative;
+    
+    margin: auto;
+    padding: 0;
+    width: 90%;
+    max-width: 1200px;
+}
