--- a/imghover.css
+++ b/imghover.css
@@ -1,11 +1,12 @@
-img {
+/*img {
     transition:transform 0.25s ease;
 }
 
 img:hover {
-    -webkit-transform:scale(1.5); /* or some other value */
+    -webkit-transform:scale(1.5); 
     transform:scale(1.5);
 }
+*/
 
 .modal {
     display: none;
