--- a/imggallery.css
+++ b/imggallery.css
@@ -44,6 +44,8 @@ clear: both;
     height: 100%;
     overflow: auto;
     background-color: #000;
+ margin-left:auto;
+ margin-right:auto;
 }
 
 .modal-content {
