--- a/style.css
+++ b/style.css
@@ -319,7 +319,7 @@ h5 {
 .center {
   display: block;
   margin-left: auto;
-  margin-right: 10%;
+  margin-right: auto;
   margin-top: 10px;
  	border: 2px ridge var(--border);
 	border-radius: 5px;
