--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ header span {
 		-1px 1px #570032,
 		1px -1px var(--accent),
 		-1px -1px var(--accent);
-	color: #c90c7a;
+	color: white;
 	justify-content: center;
 	margin-left:auto;
 	margin-right:auto;
