--- a/style.css
+++ b/style.css
@@ -498,6 +498,12 @@ to {
 }
 }
 
+imglink {
+   height: 200px;
+   width: auto;
+   mask-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+   -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+}
 
 a:hover, a:focus {
 	font-style: italic;
