--- a/style.css
+++ b/style.css
@@ -496,11 +496,11 @@ to {
   0%  {transform: rotate(1.5deg);}
   100% {transform: rotate(-1.5deg);}
 }
-}
 
 imglink {
-   height: 200px;
-   width: auto;
+   height: auto;
+   width: 200px;
+   margin: 2px 2px 2px 2px;
    mask-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
    -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
 }
