--- a/style.css
+++ b/style.css
@@ -332,7 +332,7 @@ li {
 	justify-content: space-between;
 	border-radius: 5px;
 	display: table;
-	background-color: #bca4c7;
+	background-color: #584a5c;
 }
 
 li a {
@@ -344,7 +344,7 @@ li a {
 	border-radius: 5px;
 	padding: 2px 2px 0px 2px;
 	display: block;
-	background-color: #bca4c7;
+	background-color: #584a5c;
 }
 
 li a:visited {
@@ -500,6 +500,7 @@ a:hover, a:focus {
 a:visited {
 	color: var(--accent);
 }
+
 
 
 
