--- a/style.css
+++ b/style.css
@@ -349,6 +349,11 @@ li a {
 	padding: 2px 2px 0px 2px;
 	display: block;
 	background-color: #584a5c;
+	transition: background-color 0.3s ease;
+}
+
+li a:hover {
+	 background-color:#bca4c7;
 }
 
 li a:visited {
@@ -504,6 +509,7 @@ a:hover, a:focus {
 a:visited {
 	color: var(--accent);
 }
+
 
 
 
