--- a/style.css
+++ b/style.css
@@ -90,7 +90,9 @@ background-color: #584a5c;
   /*url('https://web.archive.org/web/20090830213213im_/http://www.geocities.com/butterfly_teez/bgpurpleblinkstars.gif');*/
 }
 
-
+img.hover-shadow {
+    transition: 0.03s;
+}
 .subnavcontainer {
 	max-width: 80%;
 	margin: 5px auto 5px auto;
@@ -507,6 +509,7 @@ a:hover, a:focus {
 a:visited {
 	color: var(--accent);
 }
+
 
 
 
