--- a/style.css
+++ b/style.css
@@ -92,6 +92,10 @@ background-color: #584a5c;
 img.hover-shadow {
     transition: 0.03s;
 }
+.hover-shadow:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 .subnavcontainer {
 	max-width: 80%;
 	margin: 5px auto 5px auto;
@@ -508,6 +512,7 @@ a:hover, a:focus {
 a:visited {
 	color: var(--accent);
 }
+
 
 
 
