--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ body {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+	align-items:center;
 	/* container background pattern */
 background-color: #584a5c;
   /*url('https://web.archive.org/web/20090830213213im_/http://www.geocities.com/butterfly_teez/bgpurpleblinkstars.gif');*/
@@ -506,6 +507,7 @@ a:hover, a:focus {
 a:visited {
 	color: var(--accent);
 }
+
 
 
 
