--- a/style.css
+++ b/style.css
@@ -258,6 +258,12 @@ footer {
   height: auto;
   display: inline-block;
 }
+.sidebyside img.hover-shadow {
+    transition: 0.03s;
+}
+.hover-shadow:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
 h1 { 
 	font-size: 70px;
@@ -501,5 +507,6 @@ a:hover, a:focus {
 a:visited {
 	color: var(--accent);
 }
+
 
 
