--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ body {
 
 .container {
 	padding:-3px;
+	margin:5px;
 	max-width: 100%;
 	display: flex;
 	flex-wrap: wrap;
@@ -494,6 +495,7 @@ a:hover, a:focus {
 a:visited {
 	color: var(--accent);
 }
+
 
 
 
