--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@
 /*fonts end here lol*/
 
 * { 
+  color:white;
 	box-sizing: border-box;
 	justify-content: space-evenly;
 }
@@ -223,6 +224,7 @@ footer {
 }
 
 h1 { 
+	color:#5c0d49;
 	font-size: 5rem;
 	font-weight: italic;
   font-family: "Akaya Kanadaka";
@@ -230,9 +232,13 @@ h1 {
   margin-left: 5%;
 	margin-bottom:2%;
 	margin-top:0%;
+}
+h1 i {
 	color:#5c0d49;
 }
+
 h2 { 
+  color: white;
 	font-size: 2.2rem;
 	font-family: "Lexend";
 	font-weight: normal;
@@ -240,17 +246,20 @@ h2 {
 	margin-bottom:1rem;
 }
 h3 { 
+  color: white;
 	font-family: "Lexend";
 	font-size: 1.3rem;
 	margin-bottom:1rem;
 }
 h4 { 
+  color: white;
 	font-family: "Lexend";
 	font-size: 1rem;
 	color: var(--accent);
 	padding-left: 12px;
 }
 h5 {
+  color: white;
 	font-family: "Lexend";
 	font-size:1.5rem;
 	margin: 10px;
