--- a/style.css
+++ b/style.css
@@ -292,6 +292,7 @@ li a {
 	float: right;
 	margin-left:0px;
 	margin-right:10px;
+	margin-top:10px;
 	border-radius: 15px;
 	padding: 7px;
 	display: block;
@@ -421,3 +422,4 @@ a:hover, a:focus {
 a:visited {
 	color: var(--accent);
 }
+
