--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 /* start dark mode styling */
-	@media /*(prefers-color-scheme: dark)*/ {
+	@media screen/*(prefers-color-scheme: dark)*/ {
 		:root {
 			--text: white;
 			--bg: #ffc8dc;
@@ -9,14 +9,244 @@
 		}
 		}
 	
-
-/* end dark mode styling */
-
-@media screen and (max-width: 800px) {
-  .left, .main, .right {
-    width: 50%; /* The width is 100%, when the viewport is 800px or smaller */
+@media only screen and (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */ 
+  body{
+    background-color: red;
   }
+  h1 {
+    font-size: 15vw;
+  }
+  h2 {
+	font-size: 5.3vw;
+  }
+  h3 {
+    font-size: 4vw;
+  }
+    li {
+	font-family: "Lexend";
+	font-size: 4vw;
+	position:sticky;
+	float: right;
+	justify-content: space-between;
+	border-radius: 3vw;
+	display: table;
+	background-color: transparent;        
+	transition: background-color 0.3s ease;
 }
+
+li a {
+	font-family: "Lexend";
+	float: right;
+	margin-left:0;
+	margin-right:1vw;
+	margin-top:1vw;
+	border-radius: 3vw;
+	padding: 1.1vw;
+	display: block;
+	background-color: #5c0d49;
+	transition: background-color 0.3s ease;
+}
+
+li a:hover {
+	 background-color:#CF86A7;
+}
+
+li a:visited {
+	color: white;
+}
+
+  }
+  
+@media only screen and (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ 
+  body{
+    background-color: green;
+  }
+  h1 {
+    font-size: 10vw;
+  }
+  h2 {
+	font-size: 4vw;
+  }
+  h3 {
+    font-size: 2vw;
+  }
+    li {
+	font-family: "Lexend";
+	font-size: 3vw;
+	position:sticky;
+	float: right;
+	justify-content: space-between;
+	border-radius: 3vw;
+	display: table;
+	background-color: transparent;        
+	transition: background-color 0.3s ease;
+}
+
+li a {
+	font-family: "Lexend";
+	float: right;
+	margin-left:0;
+	margin-right:1vw;
+	margin-top:1vw;
+	border-radius: 3vw;
+	padding: 1.1vw;
+	display: block;
+	background-color: #5c0d49;
+	transition: background-color 0.3s ease;
+}
+
+li a:hover {
+	 background-color:#CF86A7;
+}
+
+li a:visited {
+	color: white;
+}
+
+  }
+@media only screen and (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ 
+  body{
+    background-color: blue;
+  }
+  h1 {
+    font-size: 8vw;
+  }
+  h2 {
+	font-size: 4vw;
+  }
+  h3 {
+    font-size: 2vw;
+  }
+    li {
+	font-family: "Lexend";
+	font-size: 2.5vw;
+	position:sticky;
+	float: right;
+	justify-content: space-between;
+	border-radius: 3vw;
+	display: table;
+	background-color: transparent;        
+	transition: background-color 0.3s ease;
+}
+
+li a {
+	font-family: "Lexend";
+	float: right;
+	margin-left:0;
+	margin-right:1vw;
+	margin-top:1vw;
+	border-radius: 3vw;
+	padding: 1.1vw;
+	display: block;
+	background-color: #5c0d49;
+	transition: background-color 0.3s ease;
+}
+
+li a:hover {
+	 background-color:#CF86A7;
+}
+
+li a:visited {
+	color: white;
+}
+
+  }
+@media only screen and (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ 
+  body{
+    background-color: yellow;
+  }
+    h1 {
+    font-size: 8vw;
+  }
+  h2 {
+	font-size: 4vw;
+  }
+  h3 {
+    font-size: 2vw;
+  }
+    li {
+	font-family: "Lexend";
+	font-size: 2.5vw;
+	position:sticky;
+	float: right;
+	justify-content: space-between;
+	border-radius: 3vw;
+	display: table;
+	background-color: transparent;        
+	transition: background-color 0.3s ease;
+}
+
+li a {
+	font-family: "Lexend";
+	float: right;
+	margin-left:0;
+	margin-right:1vw;
+	margin-top:1vw;
+	border-radius: 3vw;
+	padding: 1vw;
+	display: block;
+	background-color: #5c0d49;
+	transition: background-color 0.3s ease;
+}
+
+li a:hover {
+	 background-color:#CF86A7;
+}
+
+li a:visited {
+	color: white;
+}
+}
+
+@media only screen and (min-width:1281px) { /* hi-res laptops and desktops */ 
+  body{
+    background-color: limegreen;
+  }
+  h1 {
+    font-size: 6.5vw;
+  }
+  h2 {
+	font-size: 2.2vw;
+	margin-bottom:1vw;
+  }
+  h3{
+    font-size: 1.5vw;
+  }
+  li {
+	font-family: "Lexend";
+	font-size: 1.5vw;
+	position:sticky;
+	float: right;
+	justify-content: space-between;
+	border-radius: 3vw;
+	display: table;
+	background-color: transparent;        
+	transition: background-color 0.3s ease;
+}
+
+li a {
+	font-family: "Lexend";
+	float: right;
+	margin-left:0;
+	margin-right:1vw;
+	margin-top:1vw;
+	border-radius: 3vw;
+	padding: 0.75vw;
+	display: block;
+	background-color: #5c0d49;
+	transition: background-color 0.3s ease;
+}
+
+li a:hover {
+	 background-color:#CF86A7;
+}
+
+li a:visited {
+	color: white;
+}
+
+}
+
 
 
 /*fonts found here*/
@@ -151,7 +381,7 @@ header {
 	margin-right:auto;
 }
 header span {
-	font-size: 2.5rem;
+	font-size: 2.5vw;
 	text-align: center;
 	font-weight: bold;
 	color: white;
@@ -223,7 +453,6 @@ footer {
 
 h1 { 
 	color:#5c0d49;
-	font-size: 5rem;
 	font-weight: italic;
   font-family: "Akaya Kanadaka";
 	text-align: left;
@@ -233,40 +462,30 @@ h1 {
 }
 h1 i {
 	color:#5c0d49;
-	font-size: 5rem;
-	font-weight: italic;
-  font-family: "Akaya Kanadaka";
-	text-align: left;
-  margin-left: 5%;
-	margin-bottom:2%;
-	margin-top:0%;
 }
 
 h2 { 
   color: white;
-	font-size: 2.2rem;
 	font-family: "Lexend";
 	font-weight: normal;
 	text-align: center;
-	margin-bottom:1rem;
 }
 h3 { 
   color: white;
 	font-family: "Lexend";
-	font-size: 1.3rem;
-	margin-bottom:1rem;
+	margin-bottom:1vw;
 }
 h4 { 
   color: white;
 	font-family: "Lexend";
-	font-size: 1rem;
+	font-size: 1vw;
 	color: var(--accent);
 	padding-left: 12px;
 }
 h5 {
   color: white;
 	font-family: "Lexend";
-	font-size:1.5rem;
+	font-size:1.5vw;
 	margin: 10px;
 	font-weight: bold;
 		text-align: center;
@@ -280,38 +499,6 @@ ul {
 	margin-top:0px;
 }
 
-li {
-	font-family: "Lexend";
-	font-size: 1.5rem;
-	position:sticky;
-	float: right;
-	justify-content: space-between;
-	border-radius: 7px;
-	display: table;
-	background-color: transparent;        
-	transition: background-color 0.3s ease;
-}
-
-li a {
-	font-family: "Lexend";
-	float: right;
-	margin-left:0px;
-	margin-right:10px;
-	margin-top:10px;
-	border-radius: 15px;
-	padding: 7px;
-	display: block;
-	background-color: #5c0d49;
-	transition: background-color 0.3s ease;
-}
-
-li a:hover {
-	 background-color:#CF86A7;
-}
-
-li a:visited {
-	color: white;
-}
 
 
 
@@ -427,6 +614,3 @@ a:hover, a:focus {
 a:visited {
 	color: var(--accent);
 }
-
-
-
